{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 70,
  "lineage": "54a8ef93-0408-ffea-8bda-545fe9f88486",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "dft-rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:route-table/rtb-0f158b8490f048244",
            "default_route_table_id": "rtb-0f158b8490f048244",
            "id": "rtb-0f158b8490f048244",
            "owner_id": "040291911147",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-03c3909c0cf52cbac",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              },
              {
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-065dac2147ce661ff"
              }
            ],
            "tags": {
              "Name": "dftrt-01"
            },
            "tags_all": {
              "Name": "dftrt-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-081724c4ffde71f83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW-01",
            "aws_vpc.vpc01",
            "aws_vpc.vpc02",
            "aws_vpc_peering_connection.peer1-peer2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "dft-rt02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:route-table/rtb-0ffc4bd4599b3150f",
            "default_route_table_id": "rtb-0ffc4bd4599b3150f",
            "id": "rtb-0ffc4bd4599b3150f",
            "owner_id": "040291911147",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-075966a17045759c2",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              },
              {
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-065dac2147ce661ff"
              }
            ],
            "tags": {
              "Name": "dftrt-02"
            },
            "tags_all": {
              "Name": "dftrt-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acb86c25e6a09fce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW-02",
            "aws_vpc.vpc01",
            "aws_vpc.vpc02",
            "aws_vpc_peering_connection.peer1-peer2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:040291911147:instance/i-040b77baa660136dd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040b77baa660136dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "saniya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03b2e6faa09ff5af4"
              }
            ],
            "primary_network_interface_id": "eni-03b2e6faa09ff5af4",
            "private_dns": "ip-10-1-1-204.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.204",
            "public_ip": "13.201.225.143",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0636178061560cf40",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065ab38ca99c2c0a9",
            "tags": {
              "Name": "M-01"
            },
            "tags_all": {
              "Name": "M-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e154f0e6986cc6d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "040291911147",
            "id": "i-040b77baa660136dd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.sg-01",
            "aws_subnet.subnet",
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:040291911147:instance/i-08718fd2e8b37ff0e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08718fd2e8b37ff0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "saniya",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ed100ba96aa62148"
              }
            ],
            "primary_network_interface_id": "eni-0ed100ba96aa62148",
            "private_dns": "ip-10-2-1-133.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.133",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0108f3c118e6845d1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d6c0d5bfed42329",
            "tags": {
              "Name": "M-02"
            },
            "tags_all": {
              "Name": "M-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d88700ccf7ec2ae"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "040291911147",
            "id": "i-08718fd2e8b37ff0e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.sg-02",
            "aws_subnet.subnet2",
            "aws_vpc.vpc02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:internet-gateway/igw-03c3909c0cf52cbac",
            "id": "igw-03c3909c0cf52cbac",
            "owner_id": "040291911147",
            "region": "ap-south-1",
            "tags": {
              "Name": "igw01"
            },
            "tags_all": {
              "Name": "igw01"
            },
            "vpc_id": "vpc-081724c4ffde71f83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:internet-gateway/igw-075966a17045759c2",
            "id": "igw-075966a17045759c2",
            "owner_id": "040291911147",
            "region": "ap-south-1",
            "tags": {
              "Name": "igw02"
            },
            "tags_all": {
              "Name": "igw02"
            },
            "vpc_id": "vpc-0acb86c25e6a09fce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:security-group/sg-09e154f0e6986cc6d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e154f0e6986cc6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20251230092943681900000001",
            "name_prefix": "terraform-",
            "owner_id": "040291911147",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg01"
            },
            "tags_all": {
              "Name": "sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-081724c4ffde71f83"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "040291911147",
            "id": "sg-09e154f0e6986cc6d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:security-group/sg-05d88700ccf7ec2ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d88700ccf7ec2ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-20251230093333393100000001",
            "name_prefix": "terraform-",
            "owner_id": "040291911147",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg02"
            },
            "tags_all": {
              "Name": "sg02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0acb86c25e6a09fce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "040291911147",
            "id": "sg-05d88700ccf7ec2ae",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:subnet/subnet-065ab38ca99c2c0a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065ab38ca99c2c0a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040291911147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "subnet01"
            },
            "tags_all": {
              "Name": "subnet01"
            },
            "vpc_id": "vpc-081724c4ffde71f83"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "040291911147",
            "id": "subnet-065ab38ca99c2c0a9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:subnet/subnet-08d6c0d5bfed42329",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d6c0d5bfed42329",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040291911147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "subnet02"
            },
            "tags_all": {
              "Name": "subnet02"
            },
            "vpc_id": "vpc-0acb86c25e6a09fce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "040291911147",
            "id": "subnet-08d6c0d5bfed42329",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.vpc02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:vpc/vpc-081724c4ffde71f83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03c0647bb07089bb0",
            "default_route_table_id": "rtb-0f158b8490f048244",
            "default_security_group_id": "sg-0b89ac1d644350084",
            "dhcp_options_id": "dopt-01b5ef849ce5fcc88",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081724c4ffde71f83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f158b8490f048244",
            "owner_id": "040291911147",
            "region": "ap-south-1",
            "tags": {
              "Name": "VPC-1"
            },
            "tags_all": {
              "Name": "VPC-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "040291911147",
            "id": "vpc-081724c4ffde71f83",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:040291911147:vpc/vpc-0acb86c25e6a09fce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0c7b89239b09d1bc4",
            "default_route_table_id": "rtb-0ffc4bd4599b3150f",
            "default_security_group_id": "sg-06c60e2ce6083701d",
            "dhcp_options_id": "dopt-01b5ef849ce5fcc88",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0acb86c25e6a09fce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffc4bd4599b3150f",
            "owner_id": "040291911147",
            "region": "ap-south-1",
            "tags": {
              "Name": "VPC-2"
            },
            "tags_all": {
              "Name": "VPC-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "040291911147",
            "id": "vpc-0acb86c25e6a09fce",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer1-peer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-065dac2147ce661ff",
            "peer_owner_id": "040291911147",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0acb86c25e6a09fce",
            "region": "ap-south-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "peering between peer1 and 2"
            },
            "tags_all": {
              "Name": "peering between peer1 and 2"
            },
            "vpc_id": "vpc-081724c4ffde71f83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc01",
            "aws_vpc.vpc02"
          ]
        }
      ]
    }
  ]
}